www/custom_no_scroll.css
/*
  Author: Shengjin Li
*/

@font-face {
    font-family: customFont;
    font-weight: bold;
    src: url("AboveDemoRegular-lJMd.ttf") format("opentype");
}

.container-fluid {
  padding:0px;
  height:100vh;
  width:100vw;
  position:fixed;
}

.header {
  /*position:fixed;
  top:0;*/
  float:left;
  width:100%;
  height:20px;
  text-align:center;
  background-color:rgb(153,0,0);
}

.header_drop {
  float:left;
  display:none;
  width:100%;
  height:300px;
  background-color:rgb(153,0,0);
}

.header:hover {
  background-color:rgb(122, 31, 31);
}

.header_drop h6 {
  padding:10px;
  font-size:12px;
  color:rgb(220,220,220);
}

.header h6 {
  font-family: Arial;
  color:rgb(220,220,220);
  margin:0;
  font-size:10px;
  padding:5px 0;
}

.shiny-input-container {
  float:right;
  height:34px;
  margin:0;
  margin-top:8px;
  margin-left:5px;
  margin-right:5px;
}

.shiny-input-container br {
  display:none;
}

.control-label {
  display:none;
  margin:0;
}

.dropdown {
  width:100%;
}


.fp-slidesNav {
  left:12px;
  position:fixed;
  z-index:999999;
}

.navbar {
  float:left;
  border:0;
  border-radius:0px;
  z-index: 999;
  background-color: #9ea2a2;
  position:fixed;
  /*top:20px;*/
  width:100%;
  height:60px;
  margin-bottom:0;
  opacity:1;
  border-bottom: 1px solid #9E9B96;
}

.title {
  float:left;
  width:400px;
  height:20px;
  padding:14px;
  overflow:none;
  font-weight: 800;
}

.title h1 {
  margin:0;
  color:black;
  font-family:'customFont';
  font-size:30px;
}

.prompt_text {
  position:fixed;
  top:15px;
  right:422px;
  font-size:18px;
  
}



.page_select {
  width:100px;
  height:50px;
  background-color:red;
}

.vl {
  float:left;
  display:block;
  width:1px;
  height:100%;
  background-color:rgb(235,235,235);
}

.col1_top_left h2 {
  font-size: 38px;
  line-height: 1.07143;
  font-weight: 200;
  letter-spacing: -.005em;
  margin:26px 1px 1px 26px;
  font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
}

.col1_top_left p {
  width:75%;
  height:70%;
  margin:10px 10% 1px 15%;
  padding:5px 5px;
  font-size: 20px;
  line-height: 1.07143;
  font-weight: 200;
  letter-spacing: -.005em;
  font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
  border:2px dashed black;
}

.col2_title h2 {
  font-size: 38px;
  line-height: 1.07143;
  font-weight: 200;
  letter-spacing: -.005em;
  margin:26px 1px 1px 26px;
  font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
}

.word_redBG {
  padding: 3px 1px 1px 1px;
  background-color:red;
  color:white;
  border-radius:8px;
}

.main {
  width:100vw;
  height:100vh;
  margin-top:50px;
  overflow:scroll;
}

.s1 {
  width:100vw;
  height:100vh;
  overflow:scroll;
  z-index:9999999;
}

.nav_bar_blank {
  width:100%;
  height:50px;
  float:left;
  display:block;
}

.page1 {
  width:100%;
  height:calc(100% - 50px);
  float:left;
  display:block;
}

.col1 {
  width:50%;
  height:100%;
  float:left;
  display:block;
}

.col1_top {
  width:100%;
  height:50%;
  float:left;
  display:block;
}

.col1_top_left {
  width:50%;
  height:100%;
  float:left;
  display:block;
}

.col1_top_right {
  width:50%;
  height:100%;
  float:left;
  display:block;
}

.hr {
  width:100%;
  height:0;
  border-top:1px solid #eee;
  float:left;
  display:block;
  
}

.col1_bot {
  width:100%;
  height:calc(50% - 1px);
  float:left;
  display:block;
}

.col1_bot_left {
  width:50%;
  height:100%;
  float:left;
  display:block;
}

.col1_bot_right {
  width:50%;
  height:100%;
  float:left;
  display:block;
}

.col2 {
  width:calc(50% - 1px);
  height:100%;
  float:left;
  display:block;
}

.col2_title {
  width:100%;
  height:10%;
  float:left;
  display:block;
}

.col2_plot {
  width:100%;
  height:90%;
  float:left;
  display:block;
}

.s2 {
  width:100vw;
  height:100vh;
}

.page2 {
  width:100%;
  height:calc(100% - 50px);
  float:left;
  display:block;
}

.page2_col1 {
  width:20%;
  height:100%;
  float:left;
  display:block;
  overflow-y:scroll;
}

.page2_col2_top{
  width:100%;
  height:10%;
  float:left;
  display:block;
}

.page2_col2_down{
  width:100%;
  height:90%;
  float:left;
  display:block;
}


.page2_col1 p {
  margin:10px 10% 1px 15%;
  padding:5px 5px;
  font-size: 15px;
  line-height: 1.07143;
  font-weight: 200;
  letter-spacing: -.005em;
  font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
}

.page2_col1 li {
  margin:1px 10% 1px 20%;
  padding:5px 5px;
  font-size: 15px;
  line-height: 1.07143;
  font-weight: 200;
  letter-spacing: -.005em;
  font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
}

.page2_col1 p:nth-child(1) {
  width:75%;
  height:10%;
}

.page2_col1 p:nth-child(2) {
  width:75%;
  height:70%;
}

.page2_col2 {
  width:calc(60% - 1px);
  height:100%;
  float:left;
  display:block;
}

.img {
  
}

.page3 {
  width:100%;
  height:calc(100% - 50px);
  float:left;
  display:block;
}

.page3_col1 {
  width:calc(100% / 3);
  height:100%;
  float:left;
  display:block;
}

.page3_col2 {
  width:calc(100% / 3 - 1px);
  height:100%;
  float:left;
  display:block;
}

.page3_col3 {
  width:calc(100% / 3 - 1px);
  height:100%;
  float:left;
  display:block;
}

.page3_col2_top {
  width:100%;
  height:50%;
  float:left;
  display:block;
}

.page3_col2_bot {
  width:100%;
  height:calc(50% - 1px);
  float:left;
  display:block;
}

.page3 p {
  width:90%;
  height:90%;
  margin:10px 5% 1px 5%;
  padding:5px 5px;
  font-size: 20px;
  line-height: 1.07143;
  font-weight: 200;
  letter-spacing: -.005em;
  font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
  border:2px dashed black;
}

.page4 {
  width:100%;
  height:calc(100% - 50px);
  float:left;
  display:block;
}

.page4 p {
  width:90%;
  height:90%;
  margin:10px 5% 1px 5%;
  padding:5px 5px;
  font-size: 20px;
  line-height: 1.07143;
  font-weight: 200;
  letter-spacing: -.005em;
  font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
}

/*----------------------------------------*/
.fp-controlArrow.fp-prev {
    left: 0;
    border: none;
    width: 20px !important;
    height: 20px;
    background: url(left.png);
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: 100% 100%;
    cursor: pointer;
}
.fp-controlArrow.fp-next {
    right: 0;
    border: none;
    width: 20px;
    height: 20px;
    background: url(right.png);
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: 100% 100%;
    cursor: pointer;
}
.leaflet-container { 
background: #fff; 
z-index: 0;
}
.leaflet-control {
clear: none;
background: transparent;
box-shadow: 0 0 0 0;
font-size: 8px;
}
.leaflet-left .leaflet-control {
margin: 0;
}
.info {
padding-right: 2px;
}
.leaflet-control i {
display: block;
height: 4px;
width: 100%;
}
.leaflet-control.map-title { 
padding: 20px 10px;
font-size: 16px;
font-family: 'Helvetica Neue,Helvetica,Arial,sans-serif';
}
.info {
  width: 40px;
}
.leaflet-control-container .leaflet-bottom.leaflet-right {
  display: none;
}

